--- a/app/views/hospitals/show.html.erb
+++ b/app/views/hospitals/show.html.erb
@@ -1,1 +1,7 @@
-show.html.erb
+
+<%= @hospital.name %>
+<br>
+<%= @hospital.events %>
+<% @hospital.events.each do |event| %>
+  <%= event.name %>
+<% end %>
