--- a/app/views/hospitals/show.html.erb
+++ b/app/views/hospitals/show.html.erb
@@ -1,7 +1,6 @@
 
 <%= @hospital.name %>
 <br>
-<%= @hospital.events %>
-<% @hospital.events.each do |event| %>
+ <% @hospital.events.each do |event| %>
   <%= event.name %>
-<% end %>
+  <%= cl_image_tag event.photo.key, height: 200, width: 400, crop: :fill %><% end %>
