--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
               <h1><strong>Happy</strong></h1>
               <h1><strong>Humain</strong></h1>
               <h1><strong>Hôpital</strong></h1>
-              <h1><strong>Hhhhhhh</strong></h1>
+              <h1><strong>Hhhhhh</strong></h1>
               <h1><strong>Humain</strong></h1>
               <h1><strong>Hôpital</strong></h1>
             </div>
