--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,22 @@
-.banner_with_title{
-  width: 100%;
-  height:80%;
+.banner {
+  height: 70vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  h1 {
+    color: white;
+    font-weight: bold;
+    font-size: 35px;
+  }
+  p {
+    color: white;
+    opacity: .8;
+    font-size: 15px;
+    font-weight: lighter;
+  }
+  .btn {
+
+  }
 }
