--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,13 @@
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :username,
+          required: true,
+          input_html: { autocomplete: "username" } %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -15,6 +19,10 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.association :hospital,
+                required: true,
+                input_html: { autocomplete: "your hospital?" } %>
+
   </div>
 
   <div class="form-actions">
