--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,6 +7,8 @@
     <%= f.input :end, as: :date %>
     <%= f.input :location %>
     <%= f.input :max_particpants %>
+    <%= f.button :submit %>
+
   <% end %>
 </div>
 
