--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,19 @@
 <%= render 'shared/banner', event: @event %>
+<div class="d-flex justify-content-around">
+  <div class="participants text-center">
+    <p class= "title"><img src="https://img.icons8.com/cotton/64/000000/person-male--v2.png" width="15px">  Max participants</p>
+    <p> <%= @event.max_particpants %> </p>
+  </div>
+  <div class="loc text-center">
+    <p><img src="https://img.icons8.com/ios/100/000000/address.png" width="15px">   Location</p>
+    <p> <%= @event.location %> </p>
+  </div>
 
+</div>
+<div class="d-flex cards_participant">
+  <% Reservation.where(event: @event).each do |resa| %>
+    <div class="card_participant">
+      <%= render 'shared/card_participant', user: resa.user %>
+    </div>
+  <% end %>
+</div>
