--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,17 +1,12 @@
 <% if event.photo.attached? %>
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path event.photo.key%>'); background-position: inherit;">
-    <div class="container">
-       <h1> <%= event.name %> </h1>
-       <p><%= event.description %></p>
-       <button class="btn btn-primary"> Register </button>
-    </div>
-  </div>
 <% else %>
-  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png'); background-position: inherit;">
-    <div class="container">
-      <h1> <%= event.name %> </h1>
-      <p><%= event.description %></p>
-      <button class="btn btn-primary"> Register </button>
-    </div>
-  </div>
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1503482618211-c70b46ede8b0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80'); background-position: inherit;">
 <% end %>
+
+  <div class="container">
+     <h1> <%= event.name %> </h1>
+     <p> <%= event.description %> </p>
+     <%= link_to "Register", event_reservations_path(@event), method: :post, class: "btn btn-primary" %>
+  </div>
+</div>
