--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class='navbar'>
-  <p><i class="fas fa-home"></i></p>
-  <p><i class="fas fa-comment"></i></p>
-  <p><i class="fas fa-bell"></i></p>
-  <p><i class="fas fa-columns"></i></p>
-</div>
+       <p class="navbar-icon "><i class="fas fa-home"></i></p>
+      <p class="navbar-icon active"><i class="fas fa-comment"></i></p>
+      <p class="navbar-icon"><i class="fas fa-bell"></i></p>
+      <p class="navbar-icon"><i class="fas fa-columns"></i></p>
+ </div>
