--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,31 @@
 .navbar{
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 
+  p{
+  color: white;
+  text-align: center;
+  size: x-large;
+   }
+
+}
+
+
+
+.navbar-icon{
+  padding: 1vh 9.5vw;
+  margin: 0;
+ }
+
+ .active{
+  background-color: $gray;
+ }
+
+.sticky-navbar {
+  min-height: calc(100vh - 0vh - 5vh);
 }
