--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %>
   </head>
   <body>
-    <%= yield %>
+    <div class='sticky-navbar'>
+      <%= yield %>
+    </div>
+    <%= render 'shared/navbar' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
       <p class="notice"><%= notice %></p>
