--- a/app/assets/stylesheets/events/show.scss
+++ b/app/assets/stylesheets/events/show.scss
@@ -1,6 +1,9 @@
 .card_participant{
   display: inline-grid;
-  margin: 5vh;
+  margin: 2vh;
+  margin: 2vh;
+  padding-top: 2vh;
   text-align: center;
+  min-width: 10vw;
+  min-height: 20vh;
 }
-
