--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,7 +12,7 @@
 </div>
 <div class="d-flex cards_participant">
   <% Reservation.where(event: @event).each do |resa| %>
-    <div class="card_participant">
+    <div class="card_participant border">
       <%= render 'shared/card_participant', user: resa.user %>
     </div>
   <% end %>
