--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,9 +1,28 @@
-<div class="container">
+<div>
 <br>
   <br>
   <p>Vos évéments</p>
-  <%= @user.events %>
-  <% @user.events.each do |event| %>
-    <%= event.name %>
-  <% end %>
+    <% @user.events.each do |event| %>
+      <p><%= event.name %></p>
+      <p><%= event.start %></p>
+      <p><%= event.end %></p>
+      <p><%= event.location %></p>
+      <p><%= event.max_participants %></p>
+      <p><%= event.description %></p>
+    <% end %>
 </div>
+
+<div>
+<br>
+  <br>
+  <p>Vos invitations</p>
+    <% @user.events.each do |event| %>
+      <p><%= event.name %></p>
+      <p><%= event.start %></p>
+      <p><%= event.end %></p>
+      <p><%= event.location %></p>
+      <p><%= event.max_participants %></p>
+      <p><%= event.description %></p>
+    <% end %>
+</div>
+
