--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -1,3 +1,41 @@
-.create-event-main-container {
-  width: 100%;
+.banner-create-event {
+  display: flex;
+  justify-content: space-around;
+  background-color: #a594f9;
+  height: 10vh;
+
+  h1 {
+    color: white;
+    font-size: 26px;
+    padding: 20px;
+  }
+}
+
+.photo-create-event {
+  height: 30vh;
+  background-color: #f5efff;
+  position: relative;
+
+  #add-event-picto {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    bottom: -23px;
+    right: 18px;
+    cursor: pointer;
+  }
+
+}
+
+.lower-page {
+  background-color: white;
+}
+
+
+.form-control {
+  // border: none;
+}
+
+.form_group {
+  text-decoration: underline;
 }
