--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="header-create-event">
   <div class="banner-create-event">
     <%= image_tag("arrow_back.svg") %>
-    <h1>Create event</h1>
+    <h1>Update event</h1>
     <%= image_tag("round_done.png") %>
   </div>
   <div class="photo-create-event">
@@ -12,7 +12,7 @@
 
 <div class="container-fluid lower-page ">
   <div class="row justify-content-center" >
-    <div class="events-info col-12 col-lg-8">
+    <div class="events-info col-12 col-lg-6">
       <%= simple_form_for(@event) do |f| %>
         <%= f.input :photo, as: :file, label: false, input_html: { class: "d-none"} %>
         <%= f.input :name, label: 'Title' %>
@@ -28,6 +28,5 @@
     </div>
   </div>
 </div>
-
 
 
