particpants to participants

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 <div class="d-flex justify-content-around">
   <div class="participants text-center">
     <p class= "title"><img src="https://img.icons8.com/cotton/64/000000/person-male--v2.png" width="15px">  Max participants</p>
-    <p> <%= @event.max_particpants %> </p>
+    <p> <%= @event.max_participants %> </p>
   </div>
   <div class="loc text-center">
     <p><img src="https://img.icons8.com/ios/100/000000/address.png" width="15px">   Location</p>
