--- a/app/assets/stylesheets/events/show.scss
+++ b/app/assets/stylesheets/events/show.scss
@@ -6,9 +6,14 @@
   text-align: center;
   width: 15vh;
   height: 15vh;
-
+  cursor: pointer;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   p{
     color: $gray;
+  }
+
+  &:hover{
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   }
 }
 
@@ -18,8 +23,12 @@
 
 }
 
-.click-to-user {
+.test{
   &:hover{
-    color:red;
+    text-decoration:none;
   }
+}
+
+.show-event{
+  margin:0;
 }
