--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,11 +1,10 @@
  <div class="header-create-event">
   <div class="banner-create-event">
-    <%= image_tag("arrow_back.svg") %>
+    <%= image_tag "arrow_back.svg", height:40, width:40  %>
     <h1>Create event</h1>
-    <%= image_tag("round_done.png") %>
   </div>
   <div class="photo-create-event">
-    <%= image_tag("add-picto.svg", id:"add-event-picto") %>
+    <%= image_tag("add-photo.png", id:"add-event-picto") %>
   </div>
 </div>
 
