cards and dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,9 +11,10 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
- 
+
 @import "pages/events";
- 
+
 @import "components/search-bar-homepage";
 @import "pages/home";
-@import "events/show"
+@import "events/show";
+@import "components/cards-big";
