--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,4 @@
- 
+
 <div class="create-event-main-container">
   <%= simple_form_for(@event) do |f| %>
     <%= f.input :photo, as: :file %>
@@ -7,9 +7,9 @@
     <%= f.input :start, as: :date %>
     <%= f.input :end, as: :date %>
     <%= f.input :location %>
-    <%= f.input :max_particpants %>
+    <%= f.input :max_participants %>
   <% end %>
 </div>
 
- 
+
 
