--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,4 +33,28 @@
   </div>
 </div>
 
-<h2 style="margin-top: 3em; margin-left: 1em;">Événements à venir</h2>
+
+<div class="top-events-leo">
+  <h2 style="margin-top: 1em; margin-left: 1em; margin-bottom: 1em;">Événements à venir</h2>
+  <div class="cards-leo container">
+    <% best_events = [Event.find_by(name: "Belotte"), Event.find_by(name: "Tricot"), Event.find_by(name: "Uno")] %>
+    <% best_events.each do |event| %>
+      <div class="card-event-leo card-home-leo">
+           <% if event.photo.attached? %>
+            <%= cl_image_tag event.photo.key, height: 200, width: 400, crop: :fill %>
+           <% else %>
+          <%= image_tag "test.jpg", height: 200, width: 400, crop: :fill %>
+             <% end %>
+
+        <div class="card-event-infos-leo">
+          <div>
+            <h2><%= event.name %></h2>
+            <p><%= event.location %></p>
+          </div>
+          <h2 class="card-event-pricing-leo"> <%= "#{event.start} #{event.end}" %></h2>
+          <%= cl_image_tag event.user.photo.key, height: 40, width: 40, crop: :fill, class: "card-event-user-leo avatar-bordered" %>
+         </div>
+      </div>
+    <% end %>
+  </div>
+</div>
