--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -22,7 +22,7 @@
         <%= f.input :end, label: 'Ending date', as: :date, required: true, input_html: {class: "datepicker"}, placeholder: "YYYY/MM/DD" %>
         <%= f.input :end, label: 'Ending time', as: :time %>
         <%= f.input :location %>
-        <%= f.input :max_particpants %>
+        <%= f.input :max_participants %>
         <%= f.button :submit, class: "btn btn-primary"%>
       <% end %>
     </div>
