added various stuff

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,8 +1,7 @@
 
 <div class="header-create-event">
   <div class="banner-create-event">
-    <%= image_tag("arrow_back.svg") %>
-    <h1>Create event</h1>
+    <%= render "shared/topbar" %>
   </div>
   <div class="photo-create-event">
     <%= image_tag("add-picto.svg", id:"add-event-picto") %>
