added photo on edit event

--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -1,12 +1,13 @@
 .banner-create-event {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
+  padding-left: 30px;
   background-color: #a594f9;
   height: 10vh;
 
   h1 {
     color: white;
-    font-size: 26px;
+    font-size: 22px;
     padding: 20px;
     text-align: left;
   }
@@ -14,7 +15,7 @@
 
 .photo-create-event {
   height: 30vh;
-  background-color: #f5efff;
+  // background-color: #f5efff;
   position: relative;
 
   #add-event-picto {
