--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -4,7 +4,7 @@
     <%= render "shared/topbar" %>
   </div>
   <div class="photo-create-event">
-    <%= image_tag("add-picto.svg", id:"add-event-picto") %>
+    <%= image_tag("photo.png", id:"add-event-picto") %>
   </div>
 </div>
 
