--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,9 +19,9 @@
   <p>Il y a <%= Reservation.where(event: @event).count %> participants :</p>
   <div class="d-flex cards_participant">
     <% Reservation.where(event: @event).each do |resa| %>
-      <%= link_to user_path(resa.user) , class: "test" do %>
+      <%= link_to user_path(resa.user) , class: "link_to" do %>
         <div class="card_participant border">
-          <%= render 'shared/card_participant', user: resa.user %>
+          <%= render 'shared/card_participant', user: resa.user, event: @event %>
         </div>
       <% end %>
     <% end %>
