--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -5,13 +5,24 @@
 <% end %>
 
   <div class="container">
+    <h2><em> <%= event.user.username %> </em></h2>
     <h1> <%= event.name %> </h1>
     <p> <%= event.description %> </p>
-    <% if Reservation.where(user: current_user, event: event).exists? %>
-      <%= link_to "Se désinscrire", event_reservation_path(@event), method: :delete, class: "btn btn-danger" %>
-      <%= link_to "Chat-Room", "#", class: "btn btn-danger" %>
+    <% if current_user == event.user %>
+      <div class="d-flex justify-content-between">
+        <div class="d-flex">
+          <%= link_to "Delete Event", "#", class: "btn-del-up" %>
+          <%= link_to "Update Event", edit_event_path(event), class: "btn-del-up" %>
+        </div>
+        <%= link_to "Chat-Room", "#", class: "btn-chatroom" %>
+      </div>
+    <% elsif Reservation.where(user: current_user, event: event).exists? %>
+      <div class="d-flex justify-content-between">
+        <%= link_to "Se désinscrire", event_reservation_path(@event), method: :delete, class: "btn-desinscrire" %>
+        <%= link_to "Chat-Room", "#", class: "btn-chatroom" %>
+      </div>
     <% else %>
-      <%= link_to "Participer", event_reservations_path(@event), method: :post, class: "btn btn-primary" %>
+      <%= link_to "Participer", event_reservations_path(@event), method: :post, class: "btn-participer"%>
     <% end %>
   </div>
 </div>
