--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="search-bar-homepage">
-    <%= form_tag root_path, method: :get do %>
+    <%= form_tag handler_path, method: :get do %>
       <div class="d-flex">
         <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Votre hôpital"%>
         <button name="button" type="submit" class="icone-loupe">
