--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -11,14 +11,13 @@
 
 <div class="container-fluid lower-page ">
   <div class="row justify-content-center" >
-    <div class="events-info col-12 col-lg-8">
+    <div class="events-info col-10 col-lg-6">
       <%= simple_form_for(@event) do |f| %>
         <%= f.input :photo, as: :file, label: false, input_html: { class: "d-none"} %>
         <%= f.input :name, label: 'Title' %>
         <%= f.input :description, label: 'Describe your event' %>
-        <%= f.input :start, label: 'Starting date', as: :date, required: true, input_html: {class: "datepicker"}, placeholder: "YYYY/MM/DD" %>
+        <%= f.input :start, label: 'Date', as: :string, required: false, input_html: {class: "datepicker"}, placeholder: "YYYY/MM/DD" %>
         <%= f.input :start, label: 'Starting time', as: :time %>
-        <%= f.input :end, label: 'Ending date', as: :date, required: true, input_html: {class: "datepicker"}, placeholder: "YYYY/MM/DD" %>
         <%= f.input :end, label: 'Ending time', as: :time %>
         <%= f.input :location %>
         <%= f.input :max_participants %>
