--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-start;
   padding-left: 30px;
-  background-color: #a594f9;
+  background-color: #673ab7;
   height: 10vh;
 
   h1 {
@@ -34,17 +34,11 @@
 }
 
 
-.form-control {
-  // border: none;
-}
 
-.form_group {
-  text-decoration: underline;
-}
+// .form_group {
+//   text-decoration: underline;
+// }
 
-.control.label {
-  font-size: 15px;
-}
 
 .string.required, .text.required, .string.optional, .time.required, .integer.optional {
   font-size: 15px;
