--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,6 +2,6 @@
 @import url('https://fonts.googleapis.com/css?family=Domine:400,700|Roboto:400,500,700&display=swap');
 // Define fonts for body and headers
 
-$headers-font: 'Domine', serif;
+$headers-font: 'Roboto', sans-serif;
 $body-font: 'Roboto', sans-serif;
 
