--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,23 +1,25 @@
 <div class='navbar'>
-  <%= link_to hospital_path(current_user.hospital) do %>
-    <% if params["controller"] == 'hospitals' && params["action"] == 'show'%>
-       <p class="navbar-icon active">
-    <% else %>
-       <p class="navbar-icon">
-    <% end %>
-          <i class="fas fa-home"></i>
+  <% if current.user_signed_in?%>
+    <%= link_to hospital_path(curent_user.hospital) do %>
+      <% if params["controller"] == 'hospitals' && params["action"] == 'show'%>
+         <p class="navbar-icon active">
+      <% else %>
+         <p class="navbar-icon">
+      <% end %>
+            <i class="fas fa-home"></i>
+          </p>
+      <% end %>
+      <p class="navbar-icon"><i class="fas fa-comment"></i></p>
+      <p class="navbar-icon"><i class="fas fa-bell"></i></p>
+    <%= link_to dashboard_path do %>
+      <% if params["action"] == 'dashboard'%>
+        <p class="navbar-icon active">
+      <% else %>
+        <p class="navbar-icon">
+      <% end %>
+           <i class="fas fa-columns"></i>
         </p>
     <% end %>
-    <p class="navbar-icon"><i class="fas fa-comment"></i></p>
-    <p class="navbar-icon"><i class="fas fa-bell"></i></p>
-  <%= link_to dashboard_path do %>
-    <% if params["action"] == 'dashboard'%>
-      <p class="navbar-icon active">
-    <% else %>
-      <p class="navbar-icon">
-    <% end %>
-         <i class="fas fa-columns"></i>
-      </p>
   <% end %>
 </div>
 
