notification new registration done

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,8 +1,8 @@
 // Import page-specific CSS files here.
 @import "home";
- 
+
 @import "events";
 
- 
-@import "components/banner"
- 
+
+@import "components/banner";
+@import "components/notification"
