--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,2 +1,2 @@
-<%= image_tag("arrow_back.svg") %>
+<%= link_to image_tag("arrow_back.svg") :back, id:"back-button"; %>
     <h1><%= @name_page %></h1>
