--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -7,10 +7,11 @@
   border-radius: 50%;
 }
 .avatar-bordered {
-  width: 40px;
+  // width: 40px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+  margin-bottom: 1em;
 }
 .avatar-square {
   width: 40px;
