--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,5 @@
 <div class="show-event">
+  <%= render "shared/topbar" %>
   <%= render 'shared/banner', event: @event %>
   <div class="d-flex justify-content-around mt-3">
     <div class="participants text-center">
