--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -3,7 +3,7 @@
     <%= render "shared/topbar" %>
   </div>
   <div class="photo-create-event">
-    <%= image_tag("add-picto.svg", id:"add-event-picto") %>
+   <%= image_tag "", width: 300, class: "hidden add-event-picto", id: "photo-preview" %>
   </div>
 </div>
 
@@ -12,15 +12,14 @@
   <div class="row justify-content-center" >
     <div class="events-info col-12 col-lg-8">
       <%= simple_form_for(@event) do |f| %>
-        <%= f.input :photo, as: :file, label: false, input_html: { class: "d-none"} %>
-        <%= f.input :name, label: 'Title' %>
+        <%= f.input :photo, input_html: { class: 'hidden', id: 'photo-input'}, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>        <%= f.input :name, label: 'Title' %>
         <%= f.input :description, label: 'Describe your event' %>
         <%= f.input :start, label: 'Starting date', as: :string, required: true, input_html: {class: "datepicker"}, placeholder: "YYYY/MM/DD" %>
-        <%= f.input :start, label: 'Starting time', as: :time %>
-        <%= f.input :end, label: 'Ending time', as: :time %>
+        <%= f.input :start, label: 'Starting time', as: :string, required: true, input_html: {class: "timepicker"} %>
+        <%= f.input :end, label: 'Ending time', as: :string, required: true, input_html: {class: "timepicker"} %>
         <%= f.input :location %>
         <%= f.input :max_participants %>
-        <%= f.button :submit, class: "btn btn-primary"%>
+        <%= f.button :submit, class: "btn btn-primary", value: "Create" %>
       <% end %>
     </div>
   </div>
