--- a/app/assets/stylesheets/components/_notification.scss
+++ b/app/assets/stylesheets/components/_notification.scss
@@ -7,13 +7,8 @@
   border: 1px solid rgb(235,235,235);
 }
 
-.notification-seen{
-  display: flex;
-  align-items: center;
-  margin-bottom: 8px;
+.notification.seen{
   background: $light-gray;
-  padding: 8px 16px;
-  border: 1px solid rgb(235,235,235);
 }
 
 .notification .notification-content {
