--- a/app/views/users/notification.html.erb
+++ b/app/views/users/notification.html.erb
@@ -6,9 +6,19 @@
       <%= render 'shared/notification', notification: notification %>
     </div>
   <% end %>
-  <% @notications_seen.each do |notification| %>
-    <div class="notification-seen">
+  <% @notifications_seen.each do |notification| %>
+    <div class="notification seen">
       <%= render 'shared/notification', notification: notification %>
+    </div>
+  <% end %>
+  <% @notifications_new.each do |notification| %>
+    <div class="notification">
+      <%= render 'shared/notification_event', notification: notification %>
+    </div>
+  <% end %>
+  <% @notifications_old.each do |notification| %>
+    <div class="notification seen">
+      <%= render 'shared/notification_event', notification: notification %>
     </div>
   <% end %>
 </div>
