--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -1,21 +1,26 @@
 .banner-create-event {
   display: flex;
-  justify-content: flex-start;
-  padding-left: 30px;
   background-color: #673ab7;
   height: 10vh;
-  vertical-align: middle;
-
+  align-items: center;
   h1 {
     color: white;
     font-size: 22px;
-    padding: 20px;
+    padding-left: 3em;
     text-align: left;
   }
 
   a {
-      vertical-align: middle;
+    vertical-align: middle;
   }
+}
+
+#arrow{
+position: absolute;
+}
+
+#photo-preview{
+  width:100%;
 }
 
 .photo-create-event {
