--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,2 +1,6 @@
-<%= link_to image_tag("arrow_back.svg"), :back %>
+
+<%= link_to :back , id: "test" do %>
+  <%= image_tag "arrow_back.svg", id: 'arrow' %>
+  <%#= image_tag "photo.png", class: "add-event-picto", id: 'photo-input'%>
+<% end %>
     <h1><%= @name_page %></h1>
