--- a/app/views/hospitals/show.html.erb
+++ b/app/views/hospitals/show.html.erb
@@ -1,8 +1,16 @@
+<div class="header-create-event">
+  <div class="banner-create-event">
+    <%= render "shared/topbar" %>
+  </div>
+
+  <div class="photo-create-event">
+    <h2 id="title-hospital-index"><%="Il y a #{@hospital.events.count} évenements à #{@hospital.name}" %></h2>
+  </div>
+</div>
+
+
 <div class="container">
 
-    <h2>
-      <%="Il y a #{@hospital.events.count} évenements à #{@hospital.name}" %>
-    </h2>
     <br>
     <div class="cards-new">
        <% @hospital.events.each do |event| %>
