--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,2 +1,4 @@
-<%= link_to image_tag("arrow_back.svg"), :back %>
-    <h1><%= @name_page %></h1>
+<div class="container-topbar">
+  <%= link_to image_tag("arrow-left.png"), :back, id:"arrow-picto" %>
+  <h1><%= @name_page %></h1>
+</div>
