--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,15 @@
           </p>
       <% end %>
       <p class="navbar-icon"><i class="fas fa-comment"></i></p>
-      <p class="navbar-icon"><i class="fas fa-bell"></i></p>
+      <%= link_to notification_path do %>
+        <% if params["action"] == 'notification'%>
+           <p class="navbar-icon active">
+        <% else %>
+           <p class="navbar-icon">
+        <% end %>
+              <i class="fas fa-bell"></i>
+            </p>
+      <% end %>
     <%= link_to dashboard_path do %>
       <% if params["action"] == 'dashboard'%>
         <p class="navbar-icon active">
