--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="photo-create-event">
     <%= image_tag "smiley-logo.jpg", class: "hidden photo-create-event", id: "photo-preview" %>
-    <%= image_tag "photo.png", class: "add-event-picto", id: 'photo-input'%>
+    <%= image_tag "photo.png", class: "add-event-picto", id: "browsing-photo" %>
   </div>
 </div>
 
@@ -13,7 +13,7 @@
   <div class="row justify-content-center" >
     <div class="events-info col-12 col-lg-8">
       <%= simple_form_for(@event) do |f| %>
-        <%= f.input :photo, input_html: {  id: 'photo-input'}, label_html: { class: 'add-event-picto'}, label: '📷 Upload a photo' %>
+        <%= f.input :photo, input_html: { id: 'photo-input', class: 'd-none'}, label: false %>
         <%= f.input :name, label: 'Title' %>
         <%= f.input :description, label: 'Describe your event' %>
         <%= f.input :start, label: 'Starting date', as: :string, required: true, input_html: {class: "datepicker"}, placeholder: "YYYY/MM/DD" %>
