--- a/app/views/hospitals/show.html.erb
+++ b/app/views/hospitals/show.html.erb
@@ -1,10 +1,6 @@
 <div class="header-create-event">
-  <div class="banner-create-event">
-    <%= render "shared/topbar" %>
-  </div>
-
   <div class="photo-create-event">
-    <h2 id="title-hospital-index"><%="Il y a #{@hospital.events.count} évenements à #{@hospital.name}" %></h2>
+    <h2 id="title-hospital-index"><%="#{@hospital.events.count} événements vous sont proposés à #{@hospital.name}" %></h2>
   </div>
 </div>
 
