--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,6 +9,6 @@ $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 
-$purple: #673ab7;
+$purple: #8067CF;
 $my-red:#ff5252;
 $my-grey:#FCFAF9;
