--- a/app/assets/stylesheets/pages/_user-profile.scss
+++ b/app/assets/stylesheets/pages/_user-profile.scss
@@ -1,14 +1,14 @@
 #user-photo {
   position: absolute;
   bottom: -50px;
-  right: 95px;
+  right: 130px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
 .user-show {
   background-color: white;
-  height: 70vh;
+  height: 100%;
 }
 
 .user-infos {
@@ -33,4 +33,11 @@ background-color: white;
   position: absolute;
   top: -80px;
   right: 20px;
+}
+
+
+.cards-user-show {
+  overflow-y: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
