--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="message <%= message.from?(current_user) ? "right" : "" %>">
+<div class="message">
   <%= cl_image_tag message.user.photo.key, class: "avatar-chat" %>
   <div class="message-content"><%= message.content %></div>
 </div>
