--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,9 +1,9 @@
-<% if @message.errors.any? %>
-  // handle validation errors later
-<% else %>
+function addmessage() {
   const messagesContainer = document.querySelector('.messages');
   messagesContainer.insertAdjacentHTML('beforeend', '<%= j render "message", message: @message %>');
   const input = document.querySelector('#message_content');
   input.value = '';
   input.blur();
-<% end %>
+}
+
+addmessage();
