--- a/app/assets/stylesheets/events/show.scss
+++ b/app/assets/stylesheets/events/show.scss
@@ -8,6 +8,8 @@
   height: 15vh;
   cursor: pointer;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+
+
   p{
     color: $gray;
   }
@@ -84,4 +86,25 @@
 
 .banner{
   color:white;
+}
+
+.tete-single-event {
+   justify-content: start;
+   align-items: flex-start;
+}
+
+#date-event-show {
+  margin-top: 1em;
+  margin-left: 1em;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.badge-info {
+  width: 5em;
+  vertical-align: middle;
+  text-align: center;
+  color: white;
+  height: 3em;
+  background-color: #673ab7;
 }
