--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,25 +1,21 @@
-<div class="show-event">
-    <div class="banner-create-event">
-  <%= render "shared/topbar" %>
-    </div>
   <%= render 'shared/banner', event: @event %>
   <div class="d-flex justify-content-around mt-3">
     <div class="participants text-center">
-      <p class= "title"><img src="https://img.icons8.com/cotton/64/000000/person-male--v2.png" width="15px">  Max participants</p>
-      <p> <%= @event.max_participants %> </p>
+      <p class= "title"><img src="https://img.icons8.com/cotton/64/000000/person-male--v2.png" height="25px", width="25px"></p>
+      <p> <%= @event.max_participants %> people   </p>
     </div>
     <div class="loc text-center">
-      <p><img src="https://img.icons8.com/ios/100/000000/address.png" width="15px">   Où</p>
+      <p><img src="https://img.icons8.com/ios/100/000000/address.png" height="25px", width="25px"></p>
       <p> <%= @event.location %> </p>
     </div>
     <div class="time text-center">
-      <p><img src="https://img.icons8.com/dotty/80/000000/calendar-2.png" width="15px"> Le <%= @event.start.day %>/<%= @event.start.month %>/<%= @event.start.year %></p>
-      <p> de <%= @event.start.hour %>h<%= @event.start.min %> à <%= @event.end.hour %>h<%= @event.end.min %></p>
+      <p><img src="https://img.icons8.com/dotty/80/000000/calendar-2.png" height="25px", width="25px"></p>
+      <p><%= @event.start.hour %>h<%= @event.start.min %> - <%= @event.end.hour %>h<%= @event.end.min %></p>
     </div>
-
   </div>
 
-  <p>Il y a <%= Reservation.where(event: @event).count %> participants :</p>
+<div class="content border-top my-1">
+  <h2 id="number-of-participants"><%= Reservation.where(event: @event).count %> participants :</h2>
   <div class="d-flex cards_participant">
     <% Reservation.where(event: @event).each do |resa| %>
       <%= link_to user_path(resa.user) , class: "link_to" do %>
@@ -28,5 +24,6 @@
         </div>
       <% end %>
     <% end %>
+  </div>
   </div>
 </div>
