--- a/app/assets/stylesheets/events/show.scss
+++ b/app/assets/stylesheets/events/show.scss
@@ -40,25 +40,29 @@
   border-radius: 5px;
   font-size: 13px;
   padding: 1.5vh;
-  color:white;
+  color: white;
   &:hover{
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     opacity: 0.8;
     text-decoration:none;
+    color: white;
   }
 }
 
 .btn-desinscrire{
-  background: $gray;
+  // background: $gray;
   border-radius: 5px;
+  border: 2px solid black;
   font-size: 13px;
   padding: 1.5vh;
-  color:white;
-  opacity: 0.8;
+  color: white;
+  opacity: 0.7;
   &:hover{
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-    opacity: 0.8;
+    opacity: 0.9;
+    background-color: black;
     text-decoration:none;
+    color: white;
   }
 }
 
