--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "animate.css/animate";
 
 // Your CSS partials
 @import "components/index";
@@ -18,6 +19,6 @@
 @import "pages/home";
 @import "events/show";
 
- 
+
 @import "pages/dashboard";
- 
+
