--- a/app/assets/stylesheets/components/_card-event.scss
+++ b/app/assets/stylesheets/components/_card-event.scss
@@ -84,6 +84,11 @@
     }
 }
 
+.past-event{
+  background-color: rgba(245, 245, 245, 1);
+  opacity: 0.5;
+}
+
 .card-event-infos-new{
   display:flex;
   margin-top:1em;
@@ -101,6 +106,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
+  position: relative;
 }
 
 
