--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,9 +1,19 @@
 function addmessage() {
-  const messagesContainer = document.querySelector('.messages');
-  messagesContainer.insertAdjacentHTML('beforeend', '<%= j render "message", message: @message %>');
-  const input = document.querySelector('#message_content');
-  input.value = '';
-  input.blur();
+  const selectId = document.querySelector('#chat-refresh')
+  if (selectId.dataset.userId === <%= current_user.id %>) {
+    const messagesContainer = document.querySelector('.messages');
+    messagesContainer.insertAdjacentHTML('beforeend', '<%= j render "message", message: @message %>');
+    const input = document.querySelector('#message_content');
+    input.value = '';
+    input.blur();
+
+  }
+  else {
+    const input = document.querySelector('#message_content');
+    input.value = '';
+  };
+
 }
 
 addmessage();
+
