--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,4 +6,5 @@
 @import "user-profile";
 
 @import "components/banner";
-@import "components/notification"
+@import "components/notification";
+@import "components/badge_notification"
