--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -4,7 +4,11 @@
     <i class="fas fa-cog" style="color:white;"></i>
   </div>
   <div class="profil-image-name">
-    <%= cl_image_tag @user.photo.key, height: 60, width: 60, class: "avatar-bordered" %>
+    <% if @user.photo.attached? %>
+      <%= cl_image_tag @user.photo.key, height: 60, width: 60, class: "avatar-bordered" %>
+    <% else %>
+      <%= cl_image_tag "test.jpg", height: 60, width: 60, class: "avatar-bordered" %>
+    <% end %>
     <%= @user.username %>
   </div>
   <div class="infos-events-user">
