--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <br>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
+    <%= render 'shared/notification_alert' %>
     <% if user_signed_in? %>
       <div id="show-notif" data-user="<%= current_user.id %>" >
     <% end %>
