--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
           </p>
         <% end %>
         <div class="disparait">
-        <span class="button_badge">
+        <span class="button_badge"><%= current_user.number_of_notifications %>
         </span>
         </div>
       </div>
